Prevent home link from registering press on hitting close on mobile

--- a/assets/stylesheets/pure-menu.css
+++ b/assets/stylesheets/pure-menu.css
@@ -112,6 +112,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
   font-size: 16px;
   line-height: 50px;
   padding: 0 20px;
+  width: calc(100% - 56px);
 }
 
 @media (min-width: 1024px) {
